<resources>
    <string name="app_name">dialogalsp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_logo">Logo de la aplicación</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="or">o</string>
    <string name="login_with_google">Continuar con Google</string>
    <string name="login_with_facebook">Continuar con Facebook</string>
    <string name="dont_have_account">¿No tienes una cuenta?</string>
    <string name="register">Regístrate</string>
</resources>